<resources>
    <string name="app_name">FinalApp</string>

    <!-- Login View -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_confirm_password">Confirm Password</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_reset_password">Reset my password</string>
    <string name="login_sign_in_google">Sign In with Google</string>
    <string name="login_forgot_password">I have forgotten my password</string>
    <string name="login_create_account">Create a new account</string>
    <string name="go_to_login">Go back to Login</string>

    <!-- Bottom Navigation Menu -->

    <string name="navigation_bottom_info">Info</string>
    <string name="navigation_bottom_chat">Chat</string>
    <string name="navigation_bottom_rate">Rates</string>
    
    <string name="chat_editText_message_hint">Type here a message...</string>
    
    <string name="info_label_messages">Total messages:</string>
    <string name="info_no_name">Name is not available</string>

    <string name="options_menu_sign_out">Log Out</string>

    <!-- Rating View -->

    <string name="dialog_title">Rate the App!</string>
    <string name="dialog_edit_text_hint">Leave your feedback</string>
    <string name="dialog_ok">Rate</string>
    <string name="dialog_cancel">Cancel</string>


</resources>
